# exmodhop

./: .gitignore  .rustfmt.toml  Cargo.toml
src/: cli.rs  files.rs  fzf.rs  index.rs  init.rs  lib.rs  main.rs  parser.rs  project.rs
