[package]
name = "fzf-ex-rs"
version = "0.1.0"
edition = "2021"

[components]
rustfmt = { toolchain = "nightly" }

[dependencies]
bincode = "1.3.3"
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
criterion = "0.5.1"
dashmap = "6.1.0"
dirs-next = "2.0.0"
glob = "0.3.1"
indoc = "2.0.5"
memmap2 = "0.9.5"
rayon = "1.10.0"
sha2 = "0.10.8"
tree-sitter = "0.24.3"
tree-sitter-elixir = "0.3.1"
